--- a/IDES utility.csproj
+++ b/IDES utility.csproj
@@ -45,6 +45,10 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="WinSCPnet, Version=1.3.5.6958, Culture=neutral, PublicKeyToken=2271ec4a3c56d0bf, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>bin\Debug\WinSCPnet.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Form1.cs">
@@ -56,6 +60,7 @@
     <Compile Include="Helpers\AesManager.cs" />
     <Compile Include="Helpers\ExtensionMethods.cs" />
     <Compile Include="Helpers\RSAPKCS1SHA256SignatureDescription.cs" />
+    <Compile Include="Helpers\SFTPManager.cs" />
     <Compile Include="Helpers\XmlManager.cs" />
     <Compile Include="Helpers\ZipManager.cs" />
     <Compile Include="Program.cs" />
@@ -65,7 +70,9 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
